[package]
name = "mini-axum"
version = "0.1.0"
edition = "2024"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.12", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["net"] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["net", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
